# FamilyClaw

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
apps/api-server/: .env.example  alembic.ini  pyproject.toml
apps/api-server/app/: __init__.py  main.py  seed.py
apps/api-server/app/api/: dependencies.py  errors.py
apps/api-server/app/core/: app_version.py  blocking.py  config.py  logging.py  version_metadata.py  worker_runtime.py
apps/api-server/app/db/: engine.py  models.py  session.py  utils.py
apps/api-server/app/plugins/: _ai_provider_runtime_helpers.py  _local_openai_provider_helpers.py
apps/api-server/migrations/: 20260311-数据库迁移规范.md  README  env.py  script.py.mako
apps/api-server/migrations/versions/: 20260309_0001_create_household_foundation.py  20260309_0002_add_presence_and_context_tables.py  20260310_0002_add_member_preference_lunar_birthday.py  20260310_0003_create_ai_gateway_foundation.py  (+62 more)
apps/api-server/scripts/: build_cn_regions.py  import_cn_regions.py
apps/api-server/tests/: homeassistant_test_support.py  test_action_plugin_permissions.py  test_agent_memory_insight.py  test_agent_plugin_bridge.py  test_agent_service.py  test_agent_stage4_checkpoint.py  test_ai_config_center.py  test_ai_provider_builtin_driver_specials.py  test_ai_provider_chatgpt_driver.py  test_ai_provider_driver_gateway.py  test_ai_provider_driver_registry.py  test_ai_provider_official_plugins.py  test_ai_provider_plugin_state.py  test_ai_provider_protocol_boundaries.py  test_app_version.py  test_auth_bootstrap_flow.py  test_bootstrap_storage.py  test_builtin_channel_plugins.py  test_channel_account_delete_api.py  test_channel_accounts_api.py  test_channel_binding.py  test_channel_binding_candidates_api.py  test_channel_conversation_bridge.py  test_channel_delivery_service.py  test_channel_gateway_api.py  test_channel_gateway_builtin_deferred.py  test_channel_gateway_thread_delivery.py  test_channel_gateway_wecom_handshake.py  test_channel_polling_worker.py  test_channel_repository.py  test_channel_services.py  test_conversation_debug_log_service.py  test_conversation_device_context_summary.py  test_conversation_device_control_planner.py  test_conversation_device_control_toolkit.py  test_conversation_device_shortcut_service.py  test_conversation_direct_switch.py  test_conversation_fast_action_shortcut.py  test_conversation_foundation.py  test_conversation_lane_foundation.py  (+96 more)
apps/open-xiaoai-gateway/: pyproject.toml
apps/open-xiaoai-gateway/open_xiaoai_gateway/: __init__.py  bridge.py  invocation_policy.py  main.py  protocol.py  settings.py  translator.py
apps/open-xiaoai-gateway/tests/: test_bridge.py  test_settings.py  test_translator.py
apps/voice-runtime/: pyproject.toml
apps/voice-runtime/tests/: test_app.py
apps/voice-runtime/voice_runtime/: __init__.py  app.py  main.py  schemas.py  service.py  settings.py
(+1286 files in other folders)
