[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "familyclaw-api-server"
version = "0.1.1"
description = "FamilyClaw API server for household foundation and member center"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.16,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "httpx>=0.28,<1.0",
  "websockets>=14,<16",
  "cryptography>=44,<46",
  "numpy>=2.0,<3.0",
  "soundfile>=0.13,<1.0",
  "sherpa-onnx>=1.12.29,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

