[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "familyclaw-voice-runtime"
version = "0.1.0"
description = "FamilyClaw minimal voice runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "pydantic-settings>=2.6,<3.0",
]

[project.scripts]
familyclaw-voice-runtime = "voice_runtime.main:main"

[tool.setuptools.packages.find]
include = ["voice_runtime*"]
